# Resonance

./: .gitignore  .~lock.Resonance.odt#  CMakeLists.txt  README.md  Resonance.odt
include/resonance/: broadcaster.hpp  ear.hpp  fft.hpp  filters.hpp  safety.hpp  spectrogram.hpp
python/: README.md  requirements.txt  rms_monitor.py
python/inference/: ae_inference.py  anomaly_score.py  main.py
python/llm/: handler.py
python/onnx/: autoencoder.onnx  autoencoder.onnx.data
python/tests/: mock_node_a.py
python/training/: autoencoder.py  dataset.py  export_onnx.py  model.py  train.py
python/utils/: config.py  dsp.py  spectrogram.py  zmq_receiver.py
python/weights/: autoencoder.pth
src/: broadcaster.cpp  ear.cpp  fft.cpp  filters.cpp  main.cpp  safety.cpp  spectrogram.cpp
web/: package-lock.json  package.json  server.js
web/public/: auth.js  dashboard.js  index.html  landing.js  style.css
